8267073: Race between Card Redirtying and Freeing Collection Set regions results in missing remembered set entries with G1

Reviewed-by: kbarrett, sjohanss